--- a/package.json
+++ b/package.json
@@ -4,29 +4,30 @@
     "description": "Express backend for image-based civic issue reporting",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js",
-      "test": "echo \"Add tests here\" && exit 0"
+        "start": "node server.js",
+        "dev": "nodemon server.js",
+        "test": "echo \"Add tests here\" && exit 0"
     },
     "dependencies": {
-      "express": "^4.18.2",
-      "multer": "^1.4.5-lts.1",
-      "@google/generative-ai": "^0.17.1",
-      "googleapis": "^128.0.0",
-      "dotenv": "^16.3.1",
-      "pg": "^8.11.3"
+        "@google/generative-ai": "^0.17.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "googleapis": "^128.0.0",
+        "multer": "^1.4.5-lts.1",
+        "pg": "^8.11.3"
     },
     "devDependencies": {
-      "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1"
     },
     "keywords": [
-      "express",
-      "civic",
-      "reporting",
-      "gemini",
-      "neon",
-      "google-drive"
+        "express",
+        "civic",
+        "reporting",
+        "gemini",
+        "neon",
+        "google-drive"
     ],
     "author": "",
     "license": "MIT"
-  }
+}
